Add basic Auction domain