@@ -17,7 +17,8 @@
 
     <properties>
         <java.version>11</java.version>
-        <spock.version>1.1-groovy-2.4</spock.version>
+        <spock.version>1.3-groovy-2.5</spock.version>
+        <gmavenplus-plugin.version>1.6.2</gmavenplus-plugin.version>
     </properties>
 
     <dependencies>
@@ -51,6 +52,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -116,11 +122,11 @@
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
-                <version>1.5</version>
+                <version>${gmavenplus-plugin.version}</version>
                 <configuration>
                     <testSources>
                         <testSource>
-                            <directory>${pom.basedir}/src/test/groovy</directory>
+                            <directory>${project.basedir}/src/test/groovy</directory>
                             <includes>
                                 <include>**/*.groovy</include>
                             </includes>
@@ -130,9 +136,10 @@
                 <executions>
                     <execution>
                         <goals>
+                            <goal>addSources</goal>
                             <goal>compile</goal>
                             <goal>addTestSources</goal>
-                            <goal>testCompile</goal>
+                            <goal>compileTests</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -140,11 +147,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>${maven-surefire-plugin.version}</version>
                 <configuration>
+                    <systemPropertyVariables>
+                        <user.timezone>UTC</user.timezone>
+                    </systemPropertyVariables>
                     <includes>
-                        <include>**/*Spec.java</include>
+                        <include>**/*Spec.*</include>
                     </includes>
+                    <!--suppress UnresolvedMavenProperty -->
+                    <argLine>
+                        ${argLine} --illegal-access=permit
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
